    * TASK #101: remove TYPO3 6.2 compatibility
    * TASK #92: add currency translation and tax recalculation
    * TASK #122: add functional tests for parsing taxClass from TypoScript
    * TASK #123: add zones for shipping method configuration
    * TASK #125: add font style to all table cells in mail templates and partials
    * TASK #127: move makeCategorizable to TCA/Overrides configuration

3.12.4
    2017-07-18
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #124:  addToCartByAjax uses the normal process

3.12.3
    2017-07-14
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #121: move makeCategorizable to TCA configuration

3.12.2
    2017-07-13
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #120: update canonical tag view helper

3.12.1
    2017-07-13
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #119: load real address instances

3.12.0
    2017-06-23
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #115: add additional (JSON) field in Order\Product and Order\ProductAdditional

3.11.2
    2017-06-23
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #114: getCompleteSku doesn't return complete SKU
    *              adds getCompleteSkuWithoutProduct and getCompleteTitleWithoutProduct getter

3.11.1
    2017-06-16
    Daniel Lorenz <daniel.lorenz@extco.de>

    * BUGFIX #113: product image relation using wrong fieldname

3.11.0
    2017-06-15
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #112: add cache tag for product controller actions

3.10.0
    2017-06-15
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #111: add more products to teaser view and allow sorting them

3.9.0
    2017-06-13
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #110: add option to add additional fields to Order\Item and Order\Address

3.8.0
    2017-06-13
    Daniel Lorenz <daniel.lorenz@extco.de>

    * TASK #109: make images and files available in translation

3.7.0
    2017-06-11