@@ -6,20 +6,41 @@
         <doktype>254</doktype>
         <title>Shop</title>
     </pages>
+
     <pages>
-        <uid>101</uid>
+        <uid>110</uid>
         <pid>100</pid>
         <doktype>254</doktype>
         <title>Products</title>
     </pages>
     <pages>
-        <uid>102</uid>
+        <uid>111</uid>
+        <pid>110</pid>
+        <doktype>254</doktype>
+        <title>Products 1</title>
+    </pages>
+    <pages>
+        <uid>112</uid>
+        <pid>110</pid>
+        <doktype>254</doktype>
+        <title>Products 2</title>
+    </pages>
+    <pages>
+        <uid>113</uid>
+        <pid>110</pid>
+        <doktype>254</doktype>
+        <title>Products 3</title>
+    </pages>
+
+    <pages>
+        <uid>120</uid>
         <pid>100</pid>
         <doktype>254</doktype>
         <title>Coupons</title>
     </pages>
+
     <pages>
-        <uid>103</uid>
+        <uid>130</uid>
         <pid>100</pid>
         <doktype>254</doktype>
         <title>Orders</title>
