@@ -2,7 +2,7 @@
 <dataset>
     <tx_cart_domain_model_product_product>
         <uid>1</uid>
-        <pid>101</pid>
+        <pid>110</pid>
         <sku>first</sku>
         <title>First Product</title>
         <teaser></teaser>
@@ -10,7 +10,7 @@
     </tx_cart_domain_model_product_product>
     <tx_cart_domain_model_product_product>
         <uid>2</uid>
-        <pid>101</pid>
+        <pid>110</pid>
         <sku>second</sku>
         <title>Second Product</title>
         <teaser></teaser>
@@ -18,10 +18,44 @@
     </tx_cart_domain_model_product_product>
     <tx_cart_domain_model_product_product>
         <uid>3</uid>
-        <pid>101</pid>
+        <pid>110</pid>
         <sku>third</sku>
         <title>Third Product</title>
         <teaser></teaser>
         <description></description>
+    </tx_cart_domain_model_product_product>
+    <tx_cart_domain_model_product_product>
+        <uid>4</uid>
+        <pid>120</pid>
+        <sku>fourth</sku>
+        <title>Fourth Product</title>
+        <teaser></teaser>
+        <description></description>
+    </tx_cart_domain_model_product_product>
+    <tx_cart_domain_model_product_product>
+        <uid>5</uid>
+        <pid>130</pid>
+        <sku>fifth</sku>
+        <title>Fifth Product</title>
+        <teaser></teaser>
+        <description></description>
+    </tx_cart_domain_model_product_product>
+    <tx_cart_domain_model_product_product>
+        <uid>6</uid>
+        <pid>130</pid>
+        <sku>fifth</sku>
+        <title>Fifth Product (hidden)</title>
+        <teaser></teaser>
+        <description></description>
+        <hidden>1</hidden>
+    </tx_cart_domain_model_product_product>
+    <tx_cart_domain_model_product_product>
+        <uid>7</uid>
+        <pid>130</pid>
+        <sku>seventh</sku>
+        <title>Seventh Product (deleted)</title>
+        <teaser></teaser>
+        <description></description>
+        <deleted>1</deleted>
     </tx_cart_domain_model_product_product>
 </dataset>
