@@ -10,6 +10,7 @@
     * TASK #123: add zones for shipping method configuration
     * TASK #125: add font style to all table cells in mail templates and partials
     * TASK #127: move makeCategorizable to TCA/Overrides configuration
+    * BUGFIX #126: sorting teaser products via php
 
 3.12.4
     2017-07-18
